--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
+altair
 black==21.5b1
 flake8>=3.7.9, <4.0
 ipython~=7.10
@@ -17,5 +18,7 @@ pydantic
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
 pytest~=6.2
+python-dotenv
+sklearn
 statsmodels
 wheel>=0.35, <0.37
