--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,48 @@
-[tool.kedro]
-package_name = "timeseries"
-project_name = "timeseries"
-project_version = "0.17.7"
+[tool.poetry]
+name = "timeseries"
+version = "0.1.0"
+description = ""
+authors = ["yeungadrian"]
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-known_third_party = "kedro"
+[tool.poetry.dependencies]
+python = "^3.9"
+dvc = "^2.10.0"
+hydra-core = "^1.1.1"
+pdoc3 = "^0.10.0"
+notebook = "^6.4.10"
+pre-commit = "^2.19.0"
+altair = "^4.2.0"
+pandas = "^1.4.3"
+prefect = "^1.2.4"
+psycopg2 = "^2.9.3"
+pyarrow = "^8.0.0"
+pydantic = "^1.9.1"
+python-dotenv = "^0.20.0"
+scikit-learn = "^1.1.1"
+statsmodels = "^0.13.2"
+tqdm = "^4.64.0"
 
-[tool.pytest.ini_options]
-addopts = """
---cov-report term-missing \
---cov src/timeseries -ra"""
 
-[tool.coverage.report]
-fail_under = 0
-show_missing = true
-exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+pre-commit = "^2.17.0"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+	\.git
+| \.hg
+| \.mypy_cache
+| \.tox
+| \.venv
+| _build
+| buck-out
+| build   
+)/ 
+'''
