--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ python-dotenv = "^0.20.0"
 scikit-learn = "^1.1.1"
 statsmodels = "^0.13.2"
 tqdm = "^4.64.0"
+mlflow = "^1.27.0"
+boto3 = "^1.24.26"
 
 
 [tool.poetry.dev-dependencies]
